make project compatible with OpenJDK